[package]
name = "libsts"
version = "0.2.0"
authors = ["Robert Usher"]
edition = "2018"
description = "A library for working with Slay the Spire save and run files"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dcchut/libsts"

[dependencies]
base64 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
fwatch = "0.1.3"